[workspace]
resolver = '2'
edition = "2021"
members = ["contracts/*"]


[workspace.dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.5" }
cosmwasm-storage = { version = "1.5" }
thiserror = "1.0.26"


[profile.release]
strip = true
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
