[workspace]
resolver = '2'
members = ["contracts/*"]

[workspace.package]
version = "0.2.0"
authors = ["Oraichain Labs"]
edition = "2021"
license = "MIT"
repository = "https://github.com/oraichain/cw-launchpad.git"
homepage = "https://orai.io"
documentation = "https://github.com/oraichain/cw-launchpad.git"
exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[workspace.dependencies]
cosmwasm-std = { version = "1.5" }
cosmwasm-schema = { version = "1.5" }
cosmwasm-storage = { version = "1.5" }
thiserror = "1.0.26"
cw-storage-plus = { version = "1.0.1" }

[profile.release]
strip = true
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
