[package]
name = "tier"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }


[lib]
crate-type = ["cdylib", "rlib"]

[features]
test-tube = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["staking"] }
cosmwasm-schema = { workspace = true }
cw-storage-plus = { workspace = true }

secret-toolkit-utils = "0.3.1"


[dev-dependencies]

rand = "0.8.5"
